--- a/analysis/data_base.Rmd
+++ b/analysis/data_base.Rmd
@@ -120,7 +120,7 @@ Southern Ocean is defined here as the area between:
 ```{r write_GLODAP_SO, eval=FALSE}
 
 GLODAP_SO <- GLODAP %>% 
-  filter(latitude < SO_lat_high, latitude > SO_lat_low)
+  filter(latitude <= SO_lat_high, latitude >= SO_lat_low)
 
 GLODAP_SO  %>%  write_csv(here::here("data/_summarized_data_files", "GLODAPv2.2019_Merged_Master_File_JM_SO.csv"))
 
