--- a/analysis/data_base.Rmd
+++ b/analysis/data_base.Rmd
@@ -26,29 +26,27 @@ library(lubridate)
 theme_set(theme_bw())
 ```
 
-# Subsetting criteria
+# Reading original data
 
-```{r criteria}
+The file `GLODAPv2.2019_Merged_Master_File.csv` from glodap.info was used.
 
-SO_lat_high <- -30
-SO_lat_low <- -65
-
-```
-
-# Overview GLODAPv2-2019
-
-Saptio temporal distribution of tCO2 and talk data.
+Only rows which have at least one `talk` or `tco2` observation were subsetted. 
 
 ```{r rewrite_GLODAP_master_file, eval=FALSE}
 
 GLODAP <- read_csv(here::here("data", "GLODAPv2.2019_Merged_Master_File.csv"),
                    na = "-9999",
-                   guess_max = 1e5)
+                   col_types = cols(.default = col_double()))
 
 # relevant columns
 GLODAP <- GLODAP %>% 
   select(cruise:phtsqc)
 
+# select columns with at least one talk or tco2 observation
+GLODAP <- GLODAP %>% 
+  filter(!is.na(talk) | !is.na(tco2))
+
+# date and decade column
 GLODAP <- GLODAP %>% 
   mutate(date = ymd(paste(year, month, day)),
          decade = as.factor(floor(year / 10) * 10))
@@ -57,15 +55,22 @@ GLODAP  %>%  write_csv(here::here("data/_summarized_data_files", "GLODAPv2.2019_
 
 ```
 
+# Overview GLODAPv2-2019
+
+Saptio temporal distribution of tCO2 and talk data.
+
 ```{r reopen_GLODAP}
 
-GLODAP <- read_csv(here::here("data/_summarized_data_files", "GLODAPv2.2019_Merged_Master_File_JM.csv"),
+GLODAP <- read_csv(here::here("data/_summarized_data_files",
+                              "GLODAPv2.2019_Merged_Master_File_JM.csv"),
                    guess_max = 1e5)
 
 GLODAP <- GLODAP %>% 
   mutate(decade = as.factor(decade))
 
 ```
+
+## Histograms
 
 ```{r histogramm_tco2}
 
@@ -77,7 +82,7 @@ GLODAP %>%
   coord_cartesian(expand = 0)+
   scale_x_continuous(breaks = seq(-85,90,10))+
   scale_fill_viridis_d()+
-  labs(title = "tCO2 observations per decade within 10° latitude intervals")
+  labs(title = "tCO2 observations")
 
 ```
 
@@ -91,10 +96,9 @@ GLODAP %>%
   coord_cartesian(expand = 0)+
   scale_x_continuous(breaks = seq(-85,90,10))+
   scale_fill_viridis_d()+
-  labs(title = "talk observations per decade within 10° latitude intervals")
+  labs(title = "talk observations")
 
 ```
-
 
 ```{r histogramm_tCO2_talk}
 
@@ -106,22 +110,26 @@ GLODAP %>%
   coord_cartesian(expand = 0)+
   scale_x_continuous(breaks = seq(-85,90,10))+
   scale_fill_viridis_d()+
-  labs(title = "Combined tCO2 and talk observations per decade within 10° latitude intervals")
+  labs(title = "Paired tCO2 + talk observations")
 
 ```
 
-# Southern Ocean
+## World map
 
-Southern Ocean is defined here as the area between:
+```{r worldmap_surface_tco2_talk}
 
-- higher latitude: `r SO_lat_high`
-- lower latitude:  `r SO_lat_low`
+mapWorld <- borders("world", colour="gray60", fill="gray60")
 
-```{r write_GLODAP_SO, eval=FALSE}
-
-GLODAP_SO <- GLODAP %>% 
-  filter(latitude <= SO_lat_high, latitude >= SO_lat_low)
-
-GLODAP_SO  %>%  write_csv(here::here("data/_summarized_data_files", "GLODAPv2.2019_Merged_Master_File_JM_SO.csv"))
+GLODAP %>% 
+  filter(depth < 10) %>% 
+  ggplot(aes(longitude, latitude))+
+  mapWorld+
+  geom_point()+
+  geom_hline(yintercept = c(-30, -65), col="red")+
+  scale_x_continuous(breaks = seq(-180, 180, 30))+
+  scale_y_continuous(breaks = seq(-90, 90, 30))+
+  coord_quickmap(expand = FALSE)+
+  labs(title = "Observations within 0-10m water depth")
 
 ```
+
