--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -13,4 +13,4 @@ On this website we present our ongoing ambition to assess the alkalinity variabi
 Please navigate trough the navbar on top to take a look at the various chapters of this project.
 The links in the upper right corner bring you to the source code of this project and back to Jens' main homepage.
 
-(c) Dr. Jens Daniel Müller
+copyright, Dr. Jens Daniel Müller
