--- a/analysis/data_base.Rmd
+++ b/analysis/data_base.Rmd
@@ -28,7 +28,7 @@ theme_set(theme_bw())
 
 # Reading original data
 
-The file `GLODAPv2.2019_Merged_Master_File.csv` from glodap.info was used.
+The file `GLODAPv2.2019_Merged_Master_File.csv` from [glodap.info](https://www.glodap.info/) was used.
 
 Only rows which have at least one `talk` or `tco2` observation were subsetted. 
 
@@ -57,7 +57,7 @@ GLODAP  %>%  write_csv(here::here("data/_summarized_data_files", "GLODAPv2.2019_
 
 # Overview GLODAPv2-2019
 
-Saptio temporal distribution of tCO2 and talk data.
+Saptio-temporal distribution of `talk` and `tco2` data.
 
 ```{r reopen_GLODAP}
 
@@ -82,7 +82,7 @@ GLODAP %>%
   coord_cartesian(expand = 0)+
   scale_x_continuous(breaks = seq(-85,90,10))+
   scale_fill_viridis_d()+
-  labs(title = "tCO2 observations")
+  labs(title = "tco2 observations")
 
 ```
 
@@ -103,14 +103,14 @@ GLODAP %>%
 ```{r histogramm_tCO2_talk}
 
 GLODAP %>% 
-  filter(!is.na(talk) & is.na(tco2)) %>% 
+  filter(!is.na(talk) & !is.na(tco2)) %>% 
   ggplot(aes(latitude, fill=decade))+
   geom_vline(xintercept = -30, col="red")+
   geom_histogram(binwidth = 10, col="black", boundary = 0)+
   coord_cartesian(expand = 0)+
   scale_x_continuous(breaks = seq(-85,90,10))+
   scale_fill_viridis_d()+
-  labs(title = "Paired tCO2 + talk observations")
+  labs(title = "Paired tco2 + talk observations")
 
 ```
 
